Bug 1315122 - Remove JS::Heap<T>'s unused setToCrashOnTouch() methods r=jandem